<resources>
    <string name="app_name">My Authentication App</string>
    <string name="toast_authentication_succeed">Login is successful.</string>
    <string name="toast_authentication_failed">Login has failed.</string>
</resources>