...
                    onClick = {
                        if (username == USERNAME && password == PASSWORD) {
                            Toast.makeText(localContext, localContext.getString(R.string.toast_authentication_succeed), Toast.LENGTH_SHORT).show()
                        } else {
                            Toast.makeText(localContext, localContext.getString(R.string.toast_authentication_failed), Toast.LENGTH_SHORT).show()
                        }
                    }, modifier = Modifier.testTag("loginButton")
                ) {
                    Text("Login")
                }
            }
        }
    }
...
